@@ -1,3 +1,7 @@
+2002-02-05 (Thomas Huth):
+  * Added Svens HD-image patch.
+  * Yet another bugfix for BeOS (lseek again...)
+
 2002-01-14 (Thomas Huth):
   * Added (real) joystick support.
 
